# lgn-ncm

./: .gitignore  CHANGELOG.md  Design.md  Diagram.md  Issues.md  LICENSE  Log.md  README.md  Structure.md  Thread.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
ncmdc/: cli.py
ncmdc/crypto/: aes.py
ncmdc/meta/: writer.py
ncmdc/ncm/: cipher.py  parser.py
ncmdc/providers/: __init__.py  local_lyric.py  netease.py
ncmdc/sniff/: audio.py  image.py
tests/: test_cli_lyrics.py  test_crypto_aes.py  test_local_lyric.py  test_lyrics_provider.py  test_meta_writer.py  test_ncm_cipher.py  test_ncm_parser.py  test_ncm_songid.py  test_sniff_audio.py
